--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@
 *.log
 *.pot
 *.pyc
+
+.pyc
 __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-*/__pycache__
-/__pycache__/
+
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
